--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   ],
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://*/*", "file:///*"],
+      "matches": ["https://review.intern.facebook.com/*"],
       "js": ["shortcut.js"]
     }
   ],
@@ -24,31 +24,31 @@
       "suggested_key": {
         "default": "Alt+1"
       },
-      "description": "COMBINATION_1"
+      "description": "tags: [ Low Risk ] [ Non products ] [Others]"
     },
     "COMBINATION_2": {
       "suggested_key": {
         "default": "Alt+1"
       },
-      "description": "COMBINATION_2"
+      "description": "tags: [ Weapons ] [ All ]"
     },
     "COMBINATION_3": {
       "suggested_key": {
         "default": "Alt+1"
       },
-      "description": "COMBINATION_3"
+      "description": "tags: [ Adult health products ] [ All ]"
     },
     "COMBINATION_4": {
       "suggested_key": {
         "default": "Alt+1"
       },
-      "description": "COMBINATION_4"
+      "description": "tags: [ Tobacco ] [ All ]"
     },
     "COMBINATION_5": {     
-      "description": "COMBINATION_5"
+      "description": "tags: [ Low Risk ] [ Non products ] [Tickets] [Promotion]"
     },
     "COMBINATION_6": {      
-      "description": "COMBINATION_6"
+      "description": "tags: [ Low Risk ] [ Non products ] [Services] [Others]"
     }
   }
 }
